grid gap fixed with height auto

--- a/src/components/guestbook/CommentPreviewContainer.module.css
+++ b/src/components/guestbook/CommentPreviewContainer.module.css
@@ -1,9 +1,10 @@
 .container {
     width: 60vw;
-    height: 100%;
+    height: auto;
     margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+
   }
   
 .container2{
